# throttle

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.sh  index.html  package.json  pnpm-lock.yaml  report.json  tailwind.config.js
src/: App.tsx  main.rs  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cpu.rs  main.rs
src-tauri/src/hardware/: graphics.rs  memory.rs  mod.rs  processor.rs
src/gui/: app.rs
src/gui/app/: app.rs
src/gui/app/components/: header.rs  item.rs  mod.rs  settings.rs
src/gui/components/: header.rs  mod.rs
src/hardware/: graphics.rs  memory.rs  mod.rs  processor.rs
src/interface/Header/: index.tsx
src/interface/Item/: index.tsx
src/interface/TempItem/: index.tsx
src/interface/UsageItem/: index.tsx
