[package]
name = "throttle"
version = "0.0.5"
description = "throttle"
authors = ["Bamboooz"]
license = "BSD-3-Clause"
repository = "https://github.com/Bamboooz/throttle"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["global-shortcut-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = "1.0"
sysinfo = "0.30.12"
global-hotkey = "0.5.4"
nvml-wrapper = "0.10.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
