[package]
name = "throttle"
version = "0.0.1"
description = "throttle"
authors = ["Bamboooz"]
license = "BSD-3-Clause"
repository = "https://github.com/Bamboooz/throttle"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "global-shortcut-all", "window-hide", "window-show"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
nvml-wrapper = "0.10.0"
sysinfo = "0.30.12"

[features]
custom-protocol = ["tauri/custom-protocol"]
